--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   "scripts": {
     "start": "npm-run-all --parallel reactstart webservice",
     "reactstart": "react-scripts start",
-    "webservice": "node server.js",
+    "webservice": "node src/server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
